# bldc-foc-as5600

./: .clang-format  .cproject  .mxproject  .project  CMakeLists.txt  README.md  as5600.ioc  as5600.launch  as5600_attach.launch  bldc-foc-as5600-attach.launch  bldc-foc-as5600.ioc  bldc-foc-as5600.launch
Core/Inc/: main.h  stm32h7xx_it.h  util.h
Core/Src/: as5600.c  as5600.h  gpio.c  i2c.c  main.c  motor.c  motor.h  motor_cfg.c  motor_cfg.h  pid.c  rte.c  rte.h  stm32h7xx_it.c  tim.c
